--- a/.github/workflows/encrypt_with_assets.yml
+++ b/.github/workflows/encrypt_with_assets.yml
@@ -41,8 +41,8 @@ jobs:
         run: >
           staticrypt index.html -p ${{ secrets.DECRYPTION_PASSPHRASE }} --short
           --template "password_template.html"
-          --template-title "Login"
-          --template-instructions "This is a test website, use the password 'test' to enter."
+          --template-title "Welcome!"
+          --template-instructions "Welcome to Krupa and Indy's wedding website. Please enter the "kinder" to view the contents."
           --template-button "Open Page"
           --template-color-primary "#113e9f"
           --template-color-secondary "#e4e4e4"
