--- a/.github/workflows/encrypt_with_assets.yml
+++ b/.github/workflows/encrypt_with_assets.yml
@@ -1,4 +1,4 @@
-name: Encrypt Page with Assets
+name: Encrypt Page without Assets
 
 on:
   push:
@@ -33,13 +33,9 @@ jobs:
               rm .staticrypt.json
             fi
           fi
-      - name: Embed assets
-        run: |
-          pip install beautifulsoup4
-          python embed.py
       - name: Encrypt index
         run: >
-          staticrypt index.html -p ${{ secrets.DECRYPTION_PASSPHRASE }} --short
+          staticrypt main.html -p ${{ secrets.DECRYPTION_PASSPHRASE }} --short
           --template "password_template.html"
           --template-title "Welcome!"
           --template-instructions "Welcome to Krupa and Indy's wedding website. Please enter "kinder" to view the contents."
@@ -48,7 +44,7 @@ jobs:
           --template-color-secondary "#e4e4e4"
       - name: Clean up
         run: |
-          mv encrypted/index.html index.html
+          mv encrypted/main.html index.html
           rm -r encrypted
       - name: Commit files
         run: |
